# ui-rs

./: Cargo.toml
examples/: widget.rs
examples/game-ui/: left_bar.rs  main.rs  main_ui.rs
glium_renderer/: Cargo.toml
glium_renderer/src/: lib.rs
src/: component.rs  easy_component.rs  lib.rs  shape.rs  ui.rs
src/components/: button.rs  text.rs
src/predefined/: button.rs  input.rs  mod.rs  text.rs
